Trying to fix dark mode switch on mobile | Commit 1

--- a/site/styles/base.scss
+++ b/site/styles/base.scss
@@ -74,13 +74,13 @@ body {
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
-  font-family: var(--font-sans);
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: var(--primary);
-  color: var(--text-primary);
-  overscroll-behavior-x: none;
+  // font-family: var(--font-sans);
+  // text-rendering: optimizeLegibility;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+  // background-color: var(--primary);
+  // color: var(--text-primary);
+  // overscroll-behavior-x: none;
 }
 
 body {
